docs/milestones/v0.92.1/evidence/cloud/aws-a/readbacks/regions/eu-west-1-security-groups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0b8b703f9012c5435",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0e798b208c23e92e4",
            "SecurityGroupArn": "arn:aws:ec2:eu-west-1:713332525889:security-group/sg-0b8b703f9012c5435",
            "OwnerId": "713332525889",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "713332525889",
                            "GroupId": "sg-0b8b703f9012c5435"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
